< FEATURE ADDED > < Layout Adjustments > < Minor bugs fixed > < OutputManager Implemented > < Connection Manager Implemented >

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,13 @@
     android:orientation="vertical"
     tools:context=".activities.MainActivity">
 
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/brand_primary_color"
+        tools:title="RIM Task - Erick Cabral "
+        app:titleTextColor="@android:color/white" />
 
     <fragment
         android:id="@+id/navHostMain"
