--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,20 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Theme.RetailInMotionTask" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.RetailInMotionTask" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorOnBackground">@android:color/white</item>
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/brand_primary_color</item>
+        <item name="colorOnPrimary">@android:color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <item name="colorSecondary">@color/brand_secondary_color</item>
+        <item name="colorOnSecondary">@android:color/white</item>
+
+        <item name="colorSurface">@color/brand_color_surface</item>
+        <item name="android:statusBarColor">@color/brand_secondary_color</item>
+    </style>
+
+    <style name="CustomToolbar" parent="Widget.MaterialComponents.Toolbar">
+        <item name="android:background">@color/brand_primary_color</item>
+        <item name="android:titleTextColor">@android:color/white</item>
     </style>
 </resources>
